@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2019 the original author or authors.
+ * Copyright 2018-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.willAnswer;
 import static org.mockito.Mockito.mock;
@@ -396,7 +395,7 @@ public class ReplyingKafkaTemplateTests {
 		given(container.getContainerProperties()).willReturn(properties);
 		ProducerFactory pf = mock(ProducerFactory.class);
 		Producer producer = mock(Producer.class);
-		given(pf.createProducer(isNull())).willReturn(producer);
+		given(pf.createProducer()).willReturn(producer);
 		AtomicReference<byte[]> correlation = new AtomicReference<>();
 		willAnswer(invocation -> {
 			ProducerRecord rec = invocation.getArgument(0);
